# jwt-attacker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: token_example.txt  windows_examples.ps1  wordlist.txt
jwt_attacker/: __init__.py  __main__.py  alg_none.py  crack.py  forge.py  main.py  utils.py
tests/: __init__.py  test_alg_none.py  test_crack.py  test_forge.py
